# avian_vs_rapier

./: .gitignore  Cargo.toml  PLAN.md  README.md  build.rs  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml  release.yaml
bevy16/: Cargo.toml
bevy17/: Cargo.toml
src/: backend.rs  main.rs  spawner.rs  walls.rs
