[package]
name = "avian_vs_rapier"
authors = ["Florian Mulks <63452434+ffmulks@users.noreply.github.com>"]
version = "0.1.0"
edition = "2024"

# ── VERSION SWAP GUIDE ────────────────────────────────────────────────────────
#
#   This file = Bevy 0.18 (default).
#
#   For other versions, use an alternate manifest:
#     cargo run --manifest-path bevy17/Cargo.toml     # Bevy 0.17
#     cargo run --manifest-path bevy16/Cargo.toml     # Bevy 0.16
#
# ─────────────────────────────────────────────────────────────────────────────

[dependencies]
bevy = { version = "0.18"}

rand = "0.9"

avian2d = "0.5"
avian3d = "0.5"

# TODO: upgrade to bevy_rapier 0.33 once published for bevy 0.18
bevy_rapier2d = { git = "https://github.com/Buncys/bevy_rapier", branch = "bevy-0.18.0" }
bevy_rapier3d = { git = "https://github.com/Buncys/bevy_rapier", branch = "bevy-0.18.0" }

tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

# getrandom's wasm_js Cargo feature is required alongside --cfg getrandom_backend="wasm_js".
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["simd"]

# Enables the StateScoped compat shim in backend.rs.
# Only needed for Bevy 0.16 (which used StateScoped instead of DespawnOnExit).
legacy_state_scoped = []

parallel = [
    "avian2d/parallel",
    "avian3d/parallel",
    "bevy_rapier2d/parallel",
    "bevy_rapier3d/parallel",
]
simd = [
    "avian2d/simd",
    "avian3d/simd",
    "bevy_rapier2d/simd-stable",
    "bevy_rapier3d/simd-stable",
]

dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_ui_debug",

]
dev_native = [
    "dev",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

# ── Performance profiles ──────────────────────────────────────────────────────
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "fat"

[profile.ci]
inherits = "dev"
