[package]
name = "avian_vs_rapier"
authors = ["Florian Mulks <63452434+ffmulks@users.noreply.github.com>"]
version = "0.1.0"
edition = "2024"

# ── VERSION SWAP GUIDE ────────────────────────────────────────────────────────
#
#   This file = Bevy 0.16.
#
#   Default manifest (Bevy 0.18):  Cargo.toml
#   Newer manifest  (Bevy 0.17):   bevy17/Cargo.toml
#   This manifest  (Bevy 0.16):   bevy16/Cargo.toml
#
# ─────────────────────────────────────────────────────────────────────────────

[dependencies]
bevy = { version = "0.16" }

rand = "0.9"

avian2d = "0.3"
avian3d = "0.3"

bevy_rapier2d = "0.30"
bevy_rapier3d = "0.30"

tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

# getrandom's wasm_js Cargo feature is required alongside --cfg getrandom_backend="wasm_js".
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
# legacy_state_scoped is required for Bevy 0.16 — it activates the StateScoped shim.
default = ["dev_native", "legacy_state_scoped", "parallel", "simd"]

# Enables the StateScoped compat shim in backend.rs.
# Bevy 0.16 used StateScoped instead of DespawnOnExit.
legacy_state_scoped = []

parallel = [
    "avian2d/parallel",
    "avian3d/parallel",
    "bevy_rapier2d/parallel",
    "bevy_rapier3d/parallel",
]
simd = [
    "avian2d/simd",
    "avian3d/simd",
    "bevy_rapier2d/simd-stable",
    "bevy_rapier3d/simd-stable",
]

dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_ui_debug",
]
dev_native = [
    "dev",
    "bevy/file_watcher",
    "bevy/embedded_watcher",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(bevy_lint)"] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

# ── Performance profiles ──────────────────────────────────────────────────────
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.ci]
inherits = "dev"
